- `suspendmanager`: fix walls being treated as potential suitable access if another wall is built underneath
- text widgets no longer lose their cursor when the Ctrl-a (select all) hotkey is pressed when there is no text to select

## Misc Improvements
- `spectate`: show dwarves' activities (like prayer)

## API
- ``Military`` module: added ``addToSquad`` function
- ``Units`` module: added ``get_cached_unit_by_global_id`` to emulate how DF handles unit vector index caching (used in civzones and in general references)
- ``Buildings`` module: add ``getOwner`` (using the ``Units::get_cached_unit_by_global_id`` mechanic) to reflect changes in 51.11
- ``Units::teleport``: projectile information is now cleared for teleported units
- ``Buildings::setOwner``: updated for changes in 51.11

## Lua
- ``dfhack.military.addToSquad``: expose Military API function
- ``dfhack.buildings.getOwner``: make new Buildings API available to Lua

# 51.10-r1

## Misc Improvements
- Compatibility with DF 51.10

# 51.09-r1

## New Features
- `gui/journal`: Ctrl-j hotkey to launch `gui/journal` now works in adventure mode!

## Fixes
- Fix processing error in the overlay that displays unit preferences in the baron selection list

## API
- ``Filesystem`` module: rewritten to use C++ standard library components, for better portability

# 51.08-r1

## Misc Improvements
- Compatibility update for DF 51.08

# 51.07-r1

## New Features
- `spectate`: can now specify number of seconds (in real time) before switching to follow a new unit
- `spectate`: new "cinematic-action" mode that dynamically speeds up perspective switches based on intensity of conflict
- `spectate`: new global keybinding for toggling spectate mode: Ctrl-Shift-S
- `spectate`: new overlay panel that allows you to cycle through following next/previous units (regardless of whether spectate mode is enabled)
- `gui/sitemap`: is now the official "go to" tool. new global hotkey for fort and adventure mode: Ctrl-G

## Fixes