@@ -105,6 +105,7 @@ Template for new versions:
 
 ## Misc Improvements
 - `spectate`: show dwarves' activities (like prayer)
+- `spectate`: added prefer nicknamed units
 
 ## API
 - ``Military`` module: added ``addToSquad`` function
